# napari-proofread-brainbow

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_proofread_brainbow/: __init__.py  _widget.py  napari.yaml
src/napari_proofread_brainbow/_tests/: test_reader.py  test_widget.py  test_writer.py
